# ibmdb2-sqlglot-plugin

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml
_uv/: publish_pypi.bat  publish_pypi.sh  publish_testpypi.bat  publish_testpypi.sh
ibmdb2_sqlglot/: __init__.py  ibmdb2.py
tests/: test_db2.py
